add correct test, and add new class PageConnection.java. Connection functionality decomposition.