@@ -1,44 +1,43 @@
-import org.example.Main;
+import org.example.PageConnection;
 import org.example.WebCrawler;
 import org.jsoup.Jsoup;
+
 import org.jsoup.nodes.Document;
-import org.jsoup.select.Collector;
-import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Mockito;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileReader;
-import java.io.Reader;
+import java.io.*;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import static org.powermock.api.mockito.PowerMockito.when;
-import static org.powermock.api.support.membermodification.MemberMatcher.method;
 
-@RunWith(PowerMockRunner.class)
-@PrepareForTest(WebCrawler.class)
-public class WebCrawlerTest {
+@RunWith(MockitoJUnitRunner.class)
+public class WebCrawlerTest{
 
-    private final List<String> WORDS = Collections.singletonList("one, two, three");
+    private final List<String> WORDS = List.of("one", "two", "three");
     private final int MAX_DEPTH = 2;
-    private final String URL = "http://test.com";
+    private final String URL = "file:///Users/stanislavaleshkevich/Desktop/sofTecTestProject/src/test/resources/testhtml/Test.html";
+
+    BufferedReader fileReader = new BufferedReader(new FileReader(new File("/Users/stanislavaleshkevich/Desktop/sofTecTestProject/src/test/resources/testhtml/Test.html")));
+    String page = fileReader.lines().collect(Collectors.joining());
+    private Document document = Jsoup.parse(page);
+
+    private final WebCrawler webCrawler = new WebCrawler(WORDS, MAX_DEPTH, new PageConnection());;
+
+    public WebCrawlerTest() throws IOException {
+    }
+
+
+    @Before
+    public void init() {
+    }
 
     @Test
-    public void testCrawl() throws Exception {
-        BufferedReader fileReader = new BufferedReader(new FileReader(new File("/Users/stanislavaleshkevich/Desktop/sofTecTestProject/src/test/resources/testhtml/Test.html")));
-        String page = fileReader.lines().collect(Collectors.joining());
-        Document document = Jsoup.parse(page);
+    public void testCrawl(){
+        LinkedHashMap<String, Map<String, Integer>> map = webCrawler.crawl(URL);
 
-        WebCrawler mockWebCrawler = PowerMockito.spy(new WebCrawler(WORDS, MAX_DEPTH));
-        when(mockWebCrawler, method(WebCrawler.class, "getPageByUrl", String.class)).withArguments(URL).thenReturn(document);
-
-        LinkedHashMap<String, Map<String, Integer>> map = mockWebCrawler.crawl(URL);
+        System.out.println(map.toString());
     }
 }
